html/css/less/main.less
/* ... */
header#pedalboard-actions {
    box-shadow: 0 2px 12px black;
}
.tooltip {
  background: white;
  bottom: 50px;
  height: auto;
  padding: 7px;
  position: absolute;
  .text {
    color: #222222;
    font-weight: bold;
    line-height: 1;
    text-align: center;
  }
  .arrow {
    border-bottom: 9px solid transparent;
    border-left: 9px solid transparent;
    border-right: 9px solid transparent;
    border-top: 9px solid white;
    height: 0;
    position: absolute;
    bottom: -18px;
    right: 14px;
    width: 0;
  }
}

#mod-devices-window,
#mod-upgrade {
  background: white;
  color: black;
  font-size: 15px;
  max-height: 350px;
  overflow: auto;
  position: absolute;
  right: 10px;
  bottom: 50px;
  z-index: 100;
  .progressbar-wrapper {
    border: 1px solid #444444;
    height: 20px;
    width: 330px;
  }
  .progressbar {
    background-color: #8888ff;
    height: 18px;
  }
}

#mod-devices-window {
  max-width: 600px;
  min-width: 500px;
}

#mod-upgrade {
  max-width: 450px;
  min-width: 350px;
}

#mod-transport-window {
  bottom: 48px;
  right: 310px;
  top: initial;
  left: initial;
  background: rgba(17, 17, 17, 0.9);
  padding: 50px 40px 15px 40px;
  .mod-midi-icon {
    width: auto !important;
    padding-left: 25px;
    background-position: 5% 45% !important;
    background-image: url(../img/icons/25/midi.png);
    background-size: 15px;
    background-repeat: no-repeat;
  }
}
/* ... */

